2002-11-18  David Hyatt  <hyatt@apple.com>

	Fix crash on espn.com.
	
        * khtml/rendering/render_object.cpp:
        (RenderObject::setLayouted):

2002-11-18  David Hyatt  <hyatt@apple.com>

	Fix my <konqblock> regression on ign.com.
	
        * khtml/html/htmlparser.cpp:
        (KHTMLParser::insertNode):

2002-11-18  Maciej Stachowiak  <mjs@apple.com>

        * force-js-clean-timestamp: Rebuild for JSC changes.

2002-11-18  Darin Adler  <darin@apple.com>

        * force-js-clean-timestamp: Touch files to make the build work.

2002-11-18  Richard Williamson   <rjw@apple.com>

        Fixed 3103004.  REGRESSION: word-spacing/letter-spacing applied when they shouldn't be
        This was actually NOT a regression.  khtml wasn't recognizing the 'normal' value for the
        word and letter spacing properties.  So it incorrectly substituted a -1 spacing.

        * khtml/css/cssstyleselector.cpp:

2002-11-18  David Hyatt  <hyatt@apple.com>

	Fix render_body's repaint method.
	
        * khtml/rendering/render_body.cpp:
        (RenderBody::repaint):
        * khtml/rendering/render_body.h:

2002-11-18  Maciej Stachowiak  <mjs@apple.com>

	- fixed 3103711 - Alexander does not complete JavaScript iBench
	
        * khtml/ecma/kjs_html.cpp:
        (KJS::HTMLDocument::putValue): Resolve URL for location property
	relative to the base URL of the frame where the JavaScript is
	executing, not the target frame.

2002-11-18  David Hyatt  <hyatt@apple.com>

	Yay! Found the main cause of :hover feedback being so
	slow on links.  The diff function for styles was
	considering a color change as a containing block layout
	instead of just a repaint.  With this fix, we will no
	longer lay out when you hover over a link whose color
	is different (remember that laying out causes the whole
	page to repaint).

	There's still some work to do to optimize this further,
	since we do repaint the containing block still, but this
	should be good enough for beta.
	