@@ -1,5 +1,16 @@
 2002-11-18  David Hyatt  <hyatt@apple.com>
 
+	Fix crazyapplerumors.com.  I had the logic backwards. CSS
+	padding beats cellpadding.
+	
+        * khtml/rendering/render_table.cpp:
+        (RenderTableCell::paddingTop):
+        (RenderTableCell::paddingBottom):
+        (RenderTableCell::paddingLeft):
+        (RenderTableCell::paddingRight):
+
+2002-11-18  David Hyatt  <hyatt@apple.com>
+
 	Fix crash on espn.com.
 	
         * khtml/rendering/render_object.cpp:
